--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import "leaflet/dist/leaflet.css";
 @import "leaflet-geosearch/dist/geosearch.css";
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   background-color: #4a352f;
